--- a/src/app/shared/tooltip/tooltip.component.scss
+++ b/src/app/shared/tooltip/tooltip.component.scss
@@ -9,7 +9,6 @@ $tooltip-font-size: 13px;
     margin: 1rem;
     border-radius: 6px;
     position: absolute;
-    z-index: 1;
     transition: opacity 200ms ease-in-out;
     will-change: opacity;
 }
